[tool.poetry]
name = "ephyr-control"
version = "1.0.1"
description = ""
authors = ["Serhii Khalymon <sergiykhalimon@gmail.com>", "Illia Ananich <illia.ananich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yarl = "^1.8.1"
gql = {version = "^3.4.0", extras = ["requests", "websockets"]}
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^22.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.venv
)/
'''
