[tool.poetry]
name = "ephyr-control"
version = "1.0.1"
description = ""
authors = ["Serhii Khalymon <sergiykhalimon@gmail.com>", "Illia Ananich <illia.ananich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
yarl = "^1.8.1"
gql = {version = "^3.4.0", extras = ["requests", "websockets"]}
typing-extensions = { version = "^4.4.0", python = "<=3.10" }

# Fo subscriber.py
deepdiff = { version = "~=6.2", optional = true }
# Subscriber used with CLI
aiofiles = { version = "^22.1.0", optional = true }
orjson = { version = "^3.8.1", optional = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.16.0"
black = "^22.3"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.2.0"

[tool.poetry.extras]
subscriber = ["deepdiff"]
subscriber-cli = ["deepdiff", "aiofiles", "orjson"]

[tool.poetry.scripts]
ephyr_subscriber = { callable="ephyr_control.subscriber:run_cli", extras = ["subscriber-cli"] }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.venv
)/
'''
